src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_duration_does_not_allow_reals.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: res
---
SyntaxError { message: "Invalid type nature for generic argument. REAL is no Duration.", range: [SourceLocation { span: Range(141..142) }], err_no: type__invalid_nature }
SyntaxError { message: "Invalid type nature for generic argument. LREAL is no Duration.", range: [SourceLocation { span: Range(216..217) }], err_no: type__invalid_nature }

